[package]
name = "z80_forth"
version = "0.1.0"
edition = "2024"
description = "A Forth compiler for z80 processors, particularly aimed towards the TI-8x series of graphing calculators."
repository = "https://github.com/chickenspaceprogram/z80_forth"
license = "MPL-2.0"
keywords = ["compiler", "forth", "embedded", "z80", "calculator"]
categories = ["compilers", "command-line-utilities", "embedded"]

[dependencies]
z80_forth_derive = { version = "=0.1.0", path = "../z80_forth_derive" }

